# compiler-design-lab

./: .gitignore  Makefile  README.md  build.gradle.kts  build.sh  l1c.cabal  run.sh  settings.gradle.kts
.github/workflows/: README_success.md  starter-code.yaml
app/: Args.hs  Compile.hs  Error.hs  Main.hs
app/Compile/: AAsm.hs  AST.hs  Parser.hs  Semantic.hs
src/main/java/: module-info.java
src/main/java/edu/kit/kastel/vads/compiler/: Main.java  Position.java  Span.java
src/main/java/edu/kit/kastel/vads/compiler/asm/: Asm.java
src/main/java/edu/kit/kastel/vads/compiler/asm/node/: FunctionAsm.java  ProgramAsm.java
src/main/java/edu/kit/kastel/vads/compiler/asm/reg_alloc/: InterferenceGraph.java  Liveness.java  RegAlloc.java  ReturnAsm.java
src/main/java/edu/kit/kastel/vads/compiler/backend/aasm/: AasmRegisterAllocator.java  (+2 more)
src/main/java/edu/kit/kastel/vads/compiler/ir/: GraphConstructor.java  IrGraph.java  SsaTranslation.java
src/main/java/edu/kit/kastel/vads/compiler/ir_tac/: IrTac.java
src/main/java/edu/kit/kastel/vads/compiler/lexer/: ErrorToken.java  Identifier.java  Keyword.java  KeywordType.java  Lexer.java  NumberLiteral.java  Operator.java  Separator.java  Token.java
src/main/java/edu/kit/kastel/vads/compiler/parser/: ParseException.java  Parser.java  Printer.java  TokenSource.java
src/main/java/edu/kit/kastel/vads/compiler/semantic/: IntegerLiteralRangeAnalysis.java  Namespace.java  ReturnAnalysis.java  SemanticAnalysis.java  SemanticException.java  TypeCheckingAnalysis.java  VariableRename.java  VariableStatusAnalysis.java
(+131 files in other folders)
